jpdfium/src/main/java/stirling/software/jpdfium/panama/JpdfiumH.java


    private static class jpdfium_page_open {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_INT,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_page_open");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_page_open(int64_t doc, int32_t idx, int64_t *handle)
     * }
     */
    public static FunctionDescriptor jpdfium_page_open$descriptor() {
        return jpdfium_page_open.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_page_open(int64_t doc, int32_t idx, int64_t *handle)
     * }
     */
    public static MethodHandle jpdfium_page_open$handle() {
        return jpdfium_page_open.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_page_open(int64_t doc, int32_t idx, int64_t *handle)
     * }
     */
    public static MemorySegment jpdfium_page_open$address() {
        return jpdfium_page_open.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_page_open(int64_t doc, int32_t idx, int64_t *handle)
     * }
     */
    public static int jpdfium_page_open(long doc, int idx, MemorySegment handle) {
        var mh$ = jpdfium_page_open.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_page_open", doc, idx, handle);
            }
            return (int)mh$.invokeExact(doc, idx, handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_page_width {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_page_width");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_page_width(int64_t page, float *width)
     * }
     */
    public static FunctionDescriptor jpdfium_page_width$descriptor() {
        return jpdfium_page_width.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_page_width(int64_t page, float *width)
     * }
     */
    public static MethodHandle jpdfium_page_width$handle() {
        return jpdfium_page_width.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_page_width(int64_t page, float *width)
     * }
     */
    public static MemorySegment jpdfium_page_width$address() {
        return jpdfium_page_width.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_page_width(int64_t page, float *width)
     * }
     */
    public static int jpdfium_page_width(long page, MemorySegment width) {
        var mh$ = jpdfium_page_width.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_page_width", page, width);
            }
            return (int)mh$.invokeExact(page, width);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_page_height {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_page_height");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_page_height(int64_t page, float *height)
     * }
     */
    public static FunctionDescriptor jpdfium_page_height$descriptor() {
        return jpdfium_page_height.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_page_height(int64_t page, float *height)
     * }
     */
    public static MethodHandle jpdfium_page_height$handle() {
        return jpdfium_page_height.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_page_height(int64_t page, float *height)
     * }
     */
    public static MemorySegment jpdfium_page_height$address() {
        return jpdfium_page_height.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_page_height(int64_t page, float *height)
     * }
     */
    public static int jpdfium_page_height(long page, MemorySegment height) {
        var mh$ = jpdfium_page_height.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_page_height", page, height);
            }
            return (int)mh$.invokeExact(page, height);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_page_close {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            JpdfiumH.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_page_close");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void jpdfium_page_close(int64_t page)
     * }
     */
    public static FunctionDescriptor jpdfium_page_close$descriptor() {
        return jpdfium_page_close.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void jpdfium_page_close(int64_t page)
     * }
     */
    public static MethodHandle jpdfium_page_close$handle() {
        return jpdfium_page_close.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void jpdfium_page_close(int64_t page)
     * }
     */
    public static MemorySegment jpdfium_page_close$address() {
        return jpdfium_page_close.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void jpdfium_page_close(int64_t page)
     * }
     */
    public static void jpdfium_page_close(long page) {
        var mh$ = jpdfium_page_close.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_page_close", page);
            }
            mh$.invokeExact(page);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_render_page {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_INT,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_render_page");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_render_page(int64_t page, int32_t dpi, uint8_t **rgba, int32_t *width, int32_t *height)
     * }
     */
    public static FunctionDescriptor jpdfium_render_page$descriptor() {
        return jpdfium_render_page.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_render_page(int64_t page, int32_t dpi, uint8_t **rgba, int32_t *width, int32_t *height)
     * }
     */
    public static MethodHandle jpdfium_render_page$handle() {
        return jpdfium_render_page.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_render_page(int64_t page, int32_t dpi, uint8_t **rgba, int32_t *width, int32_t *height)
     * }
     */
    public static MemorySegment jpdfium_render_page$address() {
        return jpdfium_render_page.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_render_page(int64_t page, int32_t dpi, uint8_t **rgba, int32_t *width, int32_t *height)
     * }
     */
    public static int jpdfium_render_page(long page, int dpi, MemorySegment rgba, MemorySegment width, MemorySegment height) {
        var mh$ = jpdfium_render_page.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_render_page", page, dpi, rgba, width, height);
            }
            return (int)mh$.invokeExact(page, dpi, rgba, width, height);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_free_buffer {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_free_buffer");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void jpdfium_free_buffer(uint8_t *buffer)
     * }
     */
    public static FunctionDescriptor jpdfium_free_buffer$descriptor() {
        return jpdfium_free_buffer.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void jpdfium_free_buffer(uint8_t *buffer)
     * }
     */
    public static MethodHandle jpdfium_free_buffer$handle() {
        return jpdfium_free_buffer.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void jpdfium_free_buffer(uint8_t *buffer)
     * }
     */
    public static MemorySegment jpdfium_free_buffer$address() {
        return jpdfium_free_buffer.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void jpdfium_free_buffer(uint8_t *buffer)
     * }
     */
    public static void jpdfium_free_buffer(MemorySegment buffer) {
        var mh$ = jpdfium_free_buffer.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_free_buffer", buffer);
            }
            mh$.invokeExact(buffer);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_text_get_chars {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_text_get_chars");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_text_get_chars(int64_t page, char **json)
     * }
     */
    public static FunctionDescriptor jpdfium_text_get_chars$descriptor() {
        return jpdfium_text_get_chars.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_text_get_chars(int64_t page, char **json)
     * }
     */
    public static MethodHandle jpdfium_text_get_chars$handle() {
        return jpdfium_text_get_chars.HANDLE;
    }
